# pacsys

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  dpm_acnet_debug.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: acnet-protocol.md  api.md  backends.md  drf.md  ftpman-protocol.md  index.md  quickstart.md
docs/backends/: acl.md  dmq.md  dpm-http.md  grpc.md
docs/guide/: device-api.md  reading.md  status.md  streaming.md  writing.md
docs/plans/: 2026-02-15-async-supervisor-impl.md
docs/specialized-utils/: alarms.md  data-helpers.md  mcp-server.md  ramps.md  scaling.md  supervised.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-03-18-monitor-health-check.md
docs/superpowers/specs/: 2026-03-18-monitor-health-check-design.md
examples/: full_demo.ipynb  supervised_proxy.py  write_authentication.py
pacsys/: __init__.py  _device_base.py  acl_session.py  alarm_block.py  auth.py  corrector_ramp.py  devdb.py  device.py  digital_status.py  dpm_connection.py  dpm_protocol.py  drf_utils.py  errors.py  pool.py  ramp.py  scaling.py  ssh.py  testing.py  types.py  verify.py
pacsys/_proto/controls/common/v1/: device_pb2.py  device_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py
pacsys/_proto/controls/service/DAQ/v1/: DAQ_pb2.py  DAQ_pb2_grpc.py
pacsys/_proto/controls/service/DevDB/v1/: DevDB_pb2.py  DevDB_pb2_grpc.py
pacsys/acnet/: __init__.py  async_connection.py  connection.py  connection_dpm.py  connection_sync.py  connection_tcp.py  constants.py  dpm_acnet.py  errors.py  ftp.py  ftp_spec.py  packet.py  rad50.py
pacsys/aio/: __init__.py  _backends.py  _device.py  _dpm_http.py  _grpc.py  _subscription.py
pacsys/backends/: DAQData.proto  __init__.py  _dispatch.py  _dpm_core.py  _subscription.py  acl.py  dmq.py  dpm_http.py  grpc_backend.py
pacsys/cli/: _common.py  get.py  info.py  monitor.py  put.py
pacsys/drf3/: __init__.py  device.py  drf3.py  event.py  extra.py  field.py  property.py  range.py
pacsys/exp/: __init__.py  _logger.py  _monitor.py  _read_fresh.py  _resolve.py  _scan.py  _watch.py  _writers.py
pacsys/mcp/: __init__.py  __main__.py  _config.py  _serialization.py  _server.py  _tools.py
pacsys/resources/: DAQData.proto  __init__.py  daqdata_protocol.py
pacsys/supervised/: __init__.py  _audit.py  _conversions.py  _event_classify.py  _policies.py  _server.py
proto/controls/common/v1/: device_pb2.py  device_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py
proto/controls/service/DAQ/v1/: DAQ_pb2.py  DAQ_pb2_grpc.py
proto/controls/service/DevDB/v1/: DevDB_pb2.py  DevDB_pb2_grpc.py
scripts/: .mcp_localhost.json  .mcp_prod.json  generate_proto.py  pacsys-mcp.toml
stub-acsys/: README.md  pyproject.toml
tests/: __init__.py  conftest.py  devices.py  test_acl_backend.py  test_acl_session.py  test_acnet.py  test_acnet_protocol.py  test_alarm_block.py  test_async_connection.py  test_async_fake_backend.py  test_auth.py  test_backend_streaming.py  test_cli_common.py  test_cli_get.py  test_cli_info.py  test_cli_monitor.py  test_cli_put.py  test_corrector_ramp.py  test_devdb.py  test_device.py  test_digital_status.py  test_dispatch.py  test_dmq_backend.py  test_dpm_auth.py  test_dpm_connection.py  test_dpm_connection_unit.py  test_dpm_http_backend.py  test_dpm_stream_core.py  test_drf.py  test_drf3.py  test_ftp.py  test_ftp_spec.py  test_grpc_backend.py  test_pool.py  test_ramp.py  test_scaling.py  test_simple_api.py  test_ssh.py  test_supervised.py  test_supervised_policies.py  (+3 more)
tests/aio/: test_async_dpm_backend.py  test_async_dpm_core.py  test_async_grpc_backend.py  test_async_simple_api.py
tests/exp/: test_logger.py  test_monitor.py  test_monitor_result.py  test_read_fresh.py  test_resolve.py  test_scan.py  test_watch.py  test_writers.py
tests/real/: __init__.py  conftest.py  devices.py  test_acl_session.py  test_alarm_block.py  test_async_backend_shared.py  test_async_device_api.py  test_async_simple_api.py  test_backend_shared.py  test_devdb.py  test_device_api.py  test_dmq_backend.py  test_dpm_http_backend.py  test_grpc_backend.py  test_kerberos_auth.py  test_simple_api.py  test_ssh.py  test_supervised.py
tests/real/low_level/: test_acnet_tcp.py  test_dpm_acnet.py  test_dpm_http.py  test_ftp.py
tests/scaling_validation/: ScalingHarness.java  validate_scaling.py
tests/test_mcp/: test_config.py  test_integration.py  test_serialization.py  test_tools.py
