[build-system]
requires = [
    "setuptools >= 64",
]
build-backend = "setuptools.build_meta"

[project]
name = "pacsys"
authors = [{name = "Nikita Kuklev"}]
version = "0.2.0"
license = "GPL-3.0-or-later"
description = "Pure-python library for Fermilab control system"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "numpy >= 1.23.0",
    "tqdm >= 4.60.0",
    "httpx >= 0.23.0",
    "websockets >= 11.0",
    "grpcio >= 1.66.0",
    "protobuf >= 6.30.0",
    "pika >= 1.2.0",
    "gssapi >= 1.8.0",
    "paramiko[gssapi] >= 3.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/fast-iota/pacsys"
Documentation = "https://fast-iota.github.io/pacsys/"
Repository = "https://github.com/fast-iota/pacsys"
Issues = "https://github.com/fast-iota/pacsys/issues"

[project.scripts]
acget = "pacsys.cli.get:main"
acput = "pacsys.cli.put:main"
acmonitor = "pacsys.cli.monitor:main"
acinfo = "pacsys.cli.info:main"
pacsys-get = "pacsys.cli.get:main"
pacsys-put = "pacsys.cli.put:main"
pacsys-monitor = "pacsys.cli.monitor:main"
pacsys-info = "pacsys.cli.info:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "ty",
  "pre-commit",
  "build",
  "twine",
  "types-grpcio",
  "types-pika-ts",
  "types-protobuf",
]
doc = [
  "mkdocs",
  "mkdocs-jupyter",
  "mkdocs-macros-plugin",
  "mkdocs-material",
]

[tool.pytest.ini_options]
markers = [
    "streaming: marks tests as streaming tests (may be slow or flaky)",
    "write: marks tests that write to real devices (enable with PACSYS_TEST_WRITE=1)",
    "kerberos: marks tests that require valid Kerberos ticket",
    "ssh: marks tests that require SSH access to jump/dest hosts",
]
testpaths = ["tests"]
norecursedirs = ["reference_code"]

[tool.coverage.run]
source = ["pacsys"]
omit = ["pacsys/_proto/*", "pacsys/dpm_protocol.py", "pacsys/backends/dmq_protocol.py"]
data_file = "/tmp/.coverage"

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 120
exclude = ["stub-acsys", "pacsys/_proto", "*.md"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["pacsys/", "tests/"]
exclude = [
    "reference_code/",
    "pacsys/_proto/",
    "stub-acsys/",
]

[tool.ty.rules]
# --- Rules demoted to warn (high false-positive rate in ty beta) ---
# Union member subscript inference is weak in ty beta
not-subscriptable = "warn"
# Protocol/dynamic objects trigger spurious attribute errors
unresolved-attribute = "warn"
possibly-missing-attribute = "warn"
# Default value inference across modules is incomplete
invalid-parameter-default = "warn"

[tool.ty.analysis]
# All deps now have stubs: types-grpcio, types-pika-ts, types-protobuf; gssapi ships py.typed

# Relax checking for low-level protocol code, test infra, and tests
[[tool.ty.overrides]]
include = ["pacsys/testing.py"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
invalid-assignment = "warn"
unsupported-operator = "warn"
invalid-return-type = "warn"
invalid-method-override = "warn"

[[tool.ty.overrides]]
include = ["pacsys/dpm_protocol.py", "pacsys/backends/dmq_protocol.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["pacsys/acnet/"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
invalid-return-type = "warn"
unsupported-operator = "warn"
invalid-assignment = "warn"
unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["pacsys/cli/"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"

[[tool.ty.overrides]]
include = ["tests/"]
[tool.ty.overrides.rules]
invalid-argument-type = "warn"
invalid-assignment = "warn"
unsupported-operator = "warn"
call-non-callable = "warn"
unknown-argument = "warn"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"

[tool.ty.terminal]
output-format = "concise"

[tool.setuptools.packages.find]
where = ["."]
include = ["pacsys*"]
